# feyn-lang

./: README.md  cabal.project  feyn-lang.cabal
ECE 368 HW 1/: Makefile  a1.c
app/: Main.hs  TestCore.hs
benchmarks/: README.md  monte_carlo_feyn.fe  monte_carlo_haskell.hs  monte_carlo_python.py  neural_network_benchmarks.py  probabilistic_visualizations.py  quantum_visualizations.py  run_benchmarks.py  simple_neural_network_benchmarks.py
examples/: probabilistic_quantum.fe  probabilistic_quantum.hs  quantum_ml.fe  quantum_ml.hs
feyn-lang/: README.md  feyn-lang.cabal
feyn-lang/app/: Main.hs  TestCore.hs
feyn-lang/benchmarks/: monte_carlo_benchmarks.py  monte_carlo_feyn.fe  monte_carlo_haskell.hi  monte_carlo_haskell.hs  monte_carlo_python.py  probabilistic_visualizations.py  quantum_visualizations.py  run_benchmarks.py  simple_neural_network_benchmarks.py
feyn-lang/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
feyn-lang/examples/: probabilistic_quantum.fe  probabilistic_quantum.hs  quantum_ml.fe  quantum_ml.hs
feyn-lang/src/: Feyn.hs  Parser.hs
feyn-lang/test/: Spec.hs
src/: Feyn.hs  Parser.hs
test/: Spec.hs
